2008-06-14  Kai Tietz  <kai.tietz@onevision.com>

	* crt64/crtexe.c (duplicate_ppstrings): Correct
	type cast of allocated buffer.

2008-04-10  Kai Tietz  <kai.tietz@onevision.com>

	* gdtoa: New.

2008-04-09  Kai Tietz  <kai.tietz@onevision.com>

	PR/1938117
	* vsscanf.c: Fix assembly typo.

2008-04-08  Kai Tietz  <kai.tietz@onevision.com>

	* profile/COPYING: New.
	* profile/CYGWIN_LICENSE: New.
	* profile/gcrt0.c: New.
	* profile/gmon.c: New.
	* profile/gmon.h: New.
	* profile/mcount.c: New.
	* profile/profil.c: New.
	* profile/profil.h: New.
	* profile/profile.h: New.

2008-01-30  Kai Tietz  <kai.tietz@onevision.com>

	* misc/io_intrin.c: Correct arguments for __readmsr.

2008-01-28  Kai Tietz  <kai.tietz@onevision.com>

	* crt64/fmode.c: Set default to TEXT.

2008-01-28  sduplichan  <sduplichan@users.sourceforge.net>

	* misc/io_intrin.c: Add further intrinsic functions.

2008-01-26  Kai Tietz  <kai.tietz@onevision.com>

	* stdio/_findfirst64i32.c: Correct wide-character version to
	call _wfindfirst64.
	* misc/io_intrin.c: Add intrin I/O functions.

2008-01-25  Kai Tietz  <kai.tietz@onevision.com>

	* stdio/fseeko64.c: Correct feeko64.

2008-01-23  Kai Tietz  <kai.tietz@onevision.com>

	* crt64/dirent.c: Add add _tGetFileAttributes for win95.
	* misc/wcrtomb.c: EILSEQ check just for codepage zero.
	* misc/gettimeofday.c: Reenabled gettimeofday function.

2008-01-16  Kai Tietz  <kai.tietz@onevision.com>

	* stdio/fseeko64.c: Add os error mapping.

2008-01-05  Kai Tietz  <kai.tietz@onevision.com>

	* misc/ and crt64/: Removed dos line-endings.
	* crt64/moldname-msvcrt.def: Removed stat and fstat. PR/1863020.

2007-11-22  Kai Tietz  <kai.tietz@onevision.com>

	* crtexe.c: Corrected fs:0, gs:0 initialization. This
	let setjmp longjmp work proper.

2007-11-19  Kai Tietz  <kai.tietz@onevision.com>

	* _findfirst64i32.c: Add wide char methods.
	* _findnext64i32.c: Likewise.

2007-11-15  Kai Tietz  <kai.tietz@onevision.com>
